@@ -3018,6 +3018,11 @@ name|Slice
 argument_list|>
 argument_list|()
 decl_stmt|;
+name|boolean
+name|lastSlice
+init|=
+literal|false
+decl_stmt|;
 for|for
 control|(
 name|Slice
@@ -3083,6 +3088,10 @@ name|slice
 operator|=
 literal|null
 expr_stmt|;
+name|lastSlice
+operator|=
+literal|true
+expr_stmt|;
 block|}
 else|else
 block|{
@@ -3125,6 +3134,49 @@ argument_list|,
 name|slice
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|lastSlice
+condition|)
+block|{
+comment|// remove all empty pre allocated slices
+for|for
+control|(
+name|Slice
+name|slice
+range|:
+name|coll
+operator|.
+name|getSlices
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|slice
+operator|.
+name|getReplicas
+argument_list|()
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+name|newSlices
+operator|.
+name|remove
+argument_list|(
+name|slice
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 comment|// if there are no slices left in the collection, remove it?
