@@ -1092,6 +1092,9 @@ expr_stmt|;
 name|testCollectionsAPI
 argument_list|()
 expr_stmt|;
+name|deletePartiallyCreatedCollection
+argument_list|()
+expr_stmt|;
 name|testErrorHandling
 argument_list|()
 expr_stmt|;
@@ -1106,6 +1109,253 @@ name|printLayout
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+DECL|method|deletePartiallyCreatedCollection
+specifier|private
+name|void
+name|deletePartiallyCreatedCollection
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|baseUrl
+init|=
+name|getBaseUrl
+argument_list|(
+operator|(
+name|HttpSolrServer
+operator|)
+name|clients
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|String
+name|collectionName
+init|=
+literal|"halfdeletedcollection"
+decl_stmt|;
+name|Create
+name|createCmd
+init|=
+operator|new
+name|Create
+argument_list|()
+decl_stmt|;
+name|createCmd
+operator|.
+name|setCoreName
+argument_list|(
+literal|"halfdeletedcollection_shard1_replica1"
+argument_list|)
+expr_stmt|;
+name|createCmd
+operator|.
+name|setCollection
+argument_list|(
+name|collectionName
+argument_list|)
+expr_stmt|;
+name|String
+name|dataDir
+init|=
+name|SolrTestCaseJ4
+operator|.
+name|dataDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+operator|+
+literal|"halfcollection"
+operator|+
+literal|"_hdn"
+decl_stmt|;
+name|createCmd
+operator|.
+name|setDataDir
+argument_list|(
+name|dataDir
+argument_list|)
+expr_stmt|;
+name|createCmd
+operator|.
+name|setNumShards
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+name|createNewSolrServer
+argument_list|(
+literal|""
+argument_list|,
+name|baseUrl
+argument_list|)
+operator|.
+name|request
+argument_list|(
+name|createCmd
+argument_list|)
+expr_stmt|;
+name|printLayout
+argument_list|()
+expr_stmt|;
+name|ModifiableSolrParams
+name|params
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"action"
+argument_list|,
+name|CollectionAction
+operator|.
+name|DELETE
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"name"
+argument_list|,
+name|collectionName
+argument_list|)
+expr_stmt|;
+name|QueryRequest
+name|request
+init|=
+operator|new
+name|QueryRequest
+argument_list|(
+name|params
+argument_list|)
+decl_stmt|;
+name|request
+operator|.
+name|setPath
+argument_list|(
+literal|"/admin/collections"
+argument_list|)
+expr_stmt|;
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|resp
+init|=
+name|createNewSolrServer
+argument_list|(
+literal|""
+argument_list|,
+name|baseUrl
+argument_list|)
+operator|.
+name|request
+argument_list|(
+name|request
+argument_list|)
+decl_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|5000
+argument_list|)
+expr_stmt|;
+name|printLayout
+argument_list|()
+expr_stmt|;
+comment|// now creating that collection should work
+comment|// try a bad action
+name|params
+operator|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"action"
+argument_list|,
+name|CollectionAction
+operator|.
+name|CREATE
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"name"
+argument_list|,
+name|collectionName
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"numShards"
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|request
+operator|=
+operator|new
+name|QueryRequest
+argument_list|(
+name|params
+argument_list|)
+expr_stmt|;
+name|request
+operator|.
+name|setPath
+argument_list|(
+literal|"/admin/collections"
+argument_list|)
+expr_stmt|;
+name|resp
+operator|=
+name|createNewSolrServer
+argument_list|(
+literal|""
+argument_list|,
+name|baseUrl
+argument_list|)
+operator|.
+name|request
+argument_list|(
+name|request
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testErrorHandling
 specifier|private
@@ -1161,6 +1411,15 @@ argument_list|(
 literal|"name"
 argument_list|,
 name|collectionName
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"numShards"
+argument_list|,
+literal|2
 argument_list|)
 expr_stmt|;
 name|QueryRequest
@@ -1244,6 +1503,15 @@ name|CREATE
 operator|.
 name|toString
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"numShards"
+argument_list|,
+literal|2
 argument_list|)
 expr_stmt|;
 name|collectionName
